Properly import LinkedIn env vars.

--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,4 @@
-# Rename this to ".env" to run with Heroku or Foreman.
+# Rename this to ".env" to configure your SuccessWhale install.
 # Set the variables as appropriate.
 
 # SuccessWhale miscellaneous stuff.  Set your own password salt to any random
